# binunique

./: Cargo.toml  LICENSE
src/: cli.rs  compare.rs  fasta.rs  io.rs  lib.rs  main.rs  output.rs  types.rs
