[package]
name = "binunique"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
seq_io = "*"
flate2 = "1.1.1"
indicatif = {version = "0.17.11", features = ["rayon"]}
log = "0.4.27"
env_logger = "0.11.8"
